Fix div.control spacing in form.form [#286]

--- a/src/adapter/bootstrap/entity/form/_control.scss
+++ b/src/adapter/bootstrap/entity/form/_control.scss
@@ -1,6 +1,8 @@
 @mixin -entity-form-control {
     
     max-width: 100%;
+    margin-bottom: 0.3*$type-line-spacing;
+    overflow: hidden;
     
     color: lighten($textColor, 30%);
     
@@ -28,6 +30,7 @@
         @include box-sizing(border-box);
         
         margin-right: 10px;
+        margin-bottom: 0.5*$type-line-spacing;
         
         &.last-child {
             margin-right: 0;
@@ -46,9 +49,7 @@
     
     @media screen and (min-width: $breakpoint-small+1) {
 
-        margin-bottom: 10px;
         padding-left: $horizontalComponentOffset;
-        overflow: hidden;
 
         > label:first-child {
             margin-left: -1 * $horizontalComponentOffset;
